feat: connect signup api