@@ -6,35 +6,61 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.authority.SimpleGrantedAuthority; // 💡 권한 설정을 위한 임포트 추가
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.List; // 💡 List 사용을 위한 임포트 변경
+import java.util.List;
 
 @RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
+
     private final JwtTokenProvider jwtTokenProvider;
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+    protected void doFilterInternal(
+            HttpServletRequest request,
+            HttpServletResponse response,
+            FilterChain filterChain
+    ) throws ServletException, IOException {
+
+        // CORS Preflight 요청은 JWT 인증을 검사하지 않는다.
+        if ("OPTIONS".equalsIgnoreCase(request.getMethod())) {
+            filterChain.doFilter(request, response);
+            return;
+        }
+
         String bearerToken = request.getHeader("Authorization");
 
-        if(bearerToken != null && bearerToken.startsWith("Bearer ")) {
+        if (bearerToken != null && bearerToken.startsWith("Bearer ")) {
+
             String token = bearerToken.substring(7);
 
-            if(jwtTokenProvider.validateToken(token)){
+            if (jwtTokenProvider.validateToken(token)) {
+
                 String loginId = jwtTokenProvider.getLoginId(token);
 
-                // 💡 [핵심 수정] Collections.emptyList() 대신 기본 유저 권한("ROLE_USER")을 주입합니다.
-                // 이렇게 해야 스프링 시큐리티가 정상적인 인증 유저로 인지합니다.
-                UserDetails userDetails = new User(loginId, "", List.of(new SimpleGrantedAuthority("ROLE_USER")));
-                UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
+                UserDetails userDetails = new User(
+                        loginId,
+                        "",
+                        List.of(
+                                new SimpleGrantedAuthority("ROLE_USER")
+                        )
+                );
 
-                SecurityContextHolder.getContext().setAuthentication(authentication);
+                UsernamePasswordAuthenticationToken authentication =
+                        new UsernamePasswordAuthenticationToken(
+                                userDetails,
+                                null,
+                                userDetails.getAuthorities()
+                        );
+
+                SecurityContextHolder
+                        .getContext()
+                        .setAuthentication(authentication);
             }
         }
 
